magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/workbench.css
.mgnl-app-root {background-color:#e6e6e6;}
.mgnl-app-root .v-horizontallayout-margin {padding-top:20px; padding-left:40px;}
.mgnl-app-root .v-horizontallayout-spacing-on {padding-left:25px;}
.mgnl-workbench-toolbar .v-horizontallayout-margin {padding:0 0 20px 35px;}
.mgnl-workbench-toolbar .v-horizontallayout-spacing-on {padding-left:14px;}

.icon-view {font-family:'ContentViewIcons'; font-style:normal; font-size:24px; color:#989898;}
.icon-view:hover, .icon-view.active {color:#fff;}
.btn-view-separator {height:24px; border-left:1px solid #bbb;}

.mgnl-workbench-thumbnail-view {
    line-height: 24px;
    vertical-align: bottom;
    background-color: #FFF;
    height: 435px;
    padding: 20px;
    overflow-y: auto;
}

